<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.poly.finalproject.DentistFragment">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patLayoutBraces">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/patTextBraces"
                    android:text="@string/patBraces"
                    android:layout_alignParentStart="true" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/patTextBraces">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/patYesBraces"
                            android:text="@string/patYes"
                            android:checked="true" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/patNoBraces"
                            android:text="@string/patNo"
                            android:checked="false"/>
                </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patMedical"
            android:layout_below="@+id/patLayoutBraces">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/patTextMed"
                    android:text="@string/patMed"
                    android:layout_alignParentStart="true" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/patTextMed">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/patYesMed"
                            android:text="@string/patYes"
                            android:checked="true" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/patMedNo"
                            android:text="@string/patNo"
                            android:checked="false"/>
                </RadioGroup>
        </RelativeLayout>
        </RelativeLayout>


</FrameLayout>
